src/Uno.UI.Runtime.Skia.MacOS/UnoNativeMac/UnoNativeMac/UNOWindow.h

NS_ASSUME_NONNULL_BEGIN

typedef void (*uno_drawable_resize_fn_ptr)(void* /* window */, double /* width */, double /* height */);
- (void)windowWillMiniaturize:(NSNotification *)notification;
- (void)windowDidMiniaturize:(NSNotification *)notification;
- (void)windowDidDeminiaturize:(NSNotification *)notification;
- (void)windowDidMove:(NSNotification *)notification;
- (void)windowWillClose:(NSNotification *)notification;
- (void) windowWillStartLiveResize:(NSNotification *) notification;
- (void) windowDidEndLiveResize:(NSNotification *) notification;