src/Uno.UI.Runtime.Skia.MacOS/UnoNativeMac/UnoNativeMac/UNOMediaPlayer.h

typedef void (*uno_mediaplayer_periodic_position_update_fn_ptr)(UNOMediaPlayer* /* handle */, double position);
typedef void (*uno_mediaplayer_rate_changed_fn_ptr)(UNOMediaPlayer* /* handle */, double rate);
typedef void (*uno_mediaplayer_video_dimension_changed_fn_ptr)(UNOMediaPlayer* /* handle */, double width, double height);
typedef void (*uno_mediaplayer_duration_changed_fn_ptr)(UNOMediaPlayer* /* handle */, double duration);
typedef void (*uno_mediaplayer_ready_to_play_fn_ptr)(UNOMediaPlayer* /* handle */, double rate);
typedef void (*uno_mediaplayer_buffering_progress_changed_fn_ptr)(UNOMediaPlayer* /* handle */, double progress);
void uno_mediaplayer_set_callbacks(uno_mediaplayer_periodic_position_update_fn_ptr periodic_position_update, uno_mediaplayer_rate_changed_fn_ptr rate_changed, uno_mediaplayer_video_dimension_changed_fn_ptr video_dimension_changed, uno_mediaplayer_duration_changed_fn_ptr duration_changed, uno_mediaplayer_ready_to_play_fn_ptr ready_to_play, uno_mediaplayer_buffering_progress_changed_fn_ptr buffering_progress_changed);
id uno_mediaplayer_create(void);
bool uno_mediaplayer_is_video(UNOMediaPlayer *media);
double uno_mediaplayer_get_current_time(UNOMediaPlayer *media);
void uno_mediaplayer_set_current_time(UNOMediaPlayer *media, double seconds);
float uno_mediaplayer_get_rate(UNOMediaPlayer *media);
void uno_mediaplayer_set_rate(UNOMediaPlayer *media, float rate);
void uno_mediaplayer_set_source_path(UNOMediaPlayer *media, const char *path);
void uno_mediaplayer_set_source_uri(UNOMediaPlayer *media, const char *uri);
void uno_mediaplayer_set_stretch(UNOMediaPlayer *media, Stretch stretch);
void uno_mediaplayer_set_volume(UNOMediaPlayer *media, float volume);
void uno_mediaplayer_pause(UNOMediaPlayer *media);
void uno_mediaplayer_play(UNOMediaPlayer *media);
void uno_mediaplayer_stop(UNOMediaPlayer *media);
void uno_mediaplayer_step_by(UNOMediaPlayer *media, int32_t frames);
@end

UNOMediaPlayerView* uno_mediaplayer_create_view(void);
void uno_mediaplayer_set_view(UNOMediaPlayer *media, UNOMediaPlayerView *view, NSWindow *window);