src/Uno.UI.Runtime.Skia.MacOS/UnoNativeMac/UnoNativeMac/UNOWebView.h

NS_ASSUME_NONNULL_BEGIN

typedef void (*uno_webview_javascript_fn_ptr)(NSInteger /* handle */, const char* _Nullable /* result */, const char* _Nullable /* error */);
void uno_set_execute_callback(uno_webview_javascript_fn_ptr p);
void uno_set_invoke_callback(uno_webview_javascript_fn_ptr p);
typedef bool (*uno_webview_navigation_starting_fn_ptr)(WKWebView* /* handle */, const char* _Nullable /* url */);
typedef void (*uno_webview_navigation_finishing_fn_ptr)(WKWebView* /* handle */, const char* _Nullable /* url */);
typedef void (*uno_webview_navigation_failing_fn_ptr)(WKWebView* /* handle */, const char* _Nullable /* url */, int status);
typedef void (*uno_webview_webview_notification_fn_ptr)(WKWebView* /* handle */, NSInteger /* keyId */);
void uno_set_webview_navigation_callbacks(uno_webview_navigation_starting_fn_ptr starting, uno_webview_navigation_finishing_fn_ptr finishing, uno_webview_webview_notification_fn_ptr notification, uno_webview_navigation_finishing_fn_ptr web_message, uno_webview_navigation_failing_fn_ptr failing);
typedef bool (*uno_webview_unsupported_scheme_identified_fn_ptr)(WKWebView* /* handle */, const char* /* url */);
void uno_set_webview_unsupported_scheme_identified_callback(uno_webview_unsupported_scheme_identified_fn_ptr fn_ptr);
NSView* uno_webview_create(NSWindow *window, const char *ok, const char *cancel, bool allowFileAccessFromFileURLs, bool allowUniversalAccessFromFileURLs);
const char* uno_webview_get_title(WKWebView *webview);
bool uno_webview_can_go_back(WKWebView *webview);
bool uno_webview_can_go_forward(WKWebView *webview);
void uno_webview_go_back(WKWebView *webview);
void uno_webview_go_forward(WKWebView *webview);
void uno_webview_navigate(WKWebView *webview, const char* url, const char *jsonHeaders);
void uno_webview_load_html(WKWebView *webview, const char* html);
void uno_webview_reload(WKWebView *webview);
void uno_webview_stop(WKWebView *webview);
void uno_webview_execute_script(WKWebView *webview, NSInteger handle, const char *javascript);
void uno_webview_invoke_script(WKWebView *webview, NSInteger handle, const char *javascript);